--- a/birds.html
+++ b/birds.html
@@ -34,6 +34,18 @@
         <div>
             While reducing the size, the rows with birds names breaks at 767.20*366px. The rows with my Surname letter breaks at 575.20*366px
         </div>
+        <div class="container">
+          <img src="Bachman's Sparrow.jpg" class="img-fluid" alt="Image Not Found">
+          <img src="Abyssinian Woodpecker.jpg" class="img-fluid" alt="Image Not Found">
+          <img src="Namib long-eared bat.jpg" class="img-fluid" alt="Image Not Found">
+        </div>
+
+        <div class = "container"> 
+          <img src="Bachman's Sparrow.jpg" class="img-thumbnail" alt="Image Not Found">
+          <img src="Abyssinian Woodpecker.jpg" class="img-thumbnail" alt="Image Not Found">
+          <img src="Namib long-eared bat.jpg" class="img-thumbnail" alt="Image Not Found">
+        </div>
  </body>
+
 
 </html>
