Committing Table details

--- a/birds.html
+++ b/birds.html
@@ -45,6 +45,56 @@
           <img src="Abyssinian Woodpecker.jpg" class="img-thumbnail" alt="Image Not Found">
           <img src="Namib long-eared bat.jpg" class="img-thumbnail" alt="Image Not Found">
         </div>
+
+        <table class="table table-striped table-bordered table-hover">
+          <caption>Six letter of my Surname</caption>
+          <thead class="table-bordered">
+          <tr class="table-hover">
+            <th scope="col">Letter</th>
+            <th scope="col">Bird</th>
+            <th scope="col">Lake</th>
+            <th scope="col">Athlete</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="table-danger">
+            <th scope="row">B</th>
+            <td>Bahaman parrot</td>
+            <td>Babey Lake</td>
+            <td>Benjamin Mendy</td>
+          </tr>
+          <tr class = "table-info">
+            <th scope="row">A</th>
+            <td>Aberdare cisticola</td>
+            <td>Abashiri</td>
+            <td>Abby Bishop</td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row">N</th>
+            <td>Nacunda Nighthawk</td>
+            <td>Navishra</td>
+            <td>Nicolas Anelka</td>
+          </tr>
+          <tr class="table-primary">
+            <th scope="row">D</th>
+            <td>Donacobius</td>
+            <td>Dillon</td>
+            <td>Derrick Rose</td>
+          </tr>
+          <tr class="table-striped">
+            <th scope="row">A</th>
+            <td>Aberrant bush warbler</td>
+            <td>Abaya</td>
+            <td>Aaron Smith</td>
+          </tr>
+          <tr class="table-bordered">
+            <th scope="row">R</th>
+            <td>Red-eyed bulbul</td>
+            <td>Ranco Lake</td>
+            <td>Randy Johnson</td>
+          </tr>
+        </tbody>
+        </table>
  </body>
 
 
