--- a/birds.html
+++ b/birds.html
@@ -14,6 +14,25 @@
 
 </head>
 <body>
+  <nav class="navbar navbar-expand-md navbar-light bg-success">
+    <a class="navbar-brand" href="birds.html">Beautiful Birds</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link active" href="basic.html">Basic</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" href="advanced.html">Advanced</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
     <div class="container">
         <div class="row">
             <div class="col-sm-2">B</div>
@@ -95,7 +114,41 @@
           </tr>
         </tbody>
         </table>
- </body>
+        <label>Buttons</label>
+        <br>
+        <button class="btn">B</button>
+        <button class="btn">A</button>
+        <button class="btn">N</button>
+        <button class="btn">D</button>
+        <button class="btn">A</button>
+        <button class="btn">R</button>
+        <br>
+        <label>Group Button</label>
+        <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+          <div class="btn-group" role="group" aria-label="group 1">
+            <button type="button" class="btn btn-success">B</button>
+            <button type="button" class="btn btn-success">A</button>
+            <button type="button" class="btn btn-success">N</button>
+          </div>
+    
+          <div class="btn-group" role="group" aria-lable="group 2">
+           <button type="button" class="btn btn-warning">D</button>
+           <button type="button" class="btn btn-warning">A</button>
+          </div> 
+          <div class="btn-group" role="group" aria-lable="group 3">
+            <button type="button" class="btn btn-danger">R</button>
+         </div> 
+       </div>
+
+       <div class="dropdown">
+        <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Dropdown button</button>
+         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+           <li><a class="dropdown-item" href="basic.html">Basic</a></li>
+           <li><a class="dropdown-item" href="advanced.html">Advanced</a></li>
+     
+         </div>
+       </div> 
+       </body>
 
 
 </html>
