--- a/birds.html
+++ b/birds.html
@@ -165,6 +165,35 @@
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
+      <br>
+      <div class="card-group">
+        <div class="card" style="width: 18rem;">
+          <img src="Bachman's Sparrow.jpg" class="card-img-top" alt="Image Not Found">
+          <div class="card-body">
+            <h5 class="card-title">Bachman's Sparrow</h5>
+            <p class="card-text">Bachman's sparrow is a small American sparrow that is endemic to the southeastern United States. This species was named in honor of Reverend John Bachman. Adults have rufous brown upperparts and crown with gray and black streaking on the nape, back and primaries.</p>
+            <a href="https://en.wikipedia.org/wiki/Bachman's_sparrow" class="btn btn-primary">Get full details</a>
+          </div>
+        </div>
+      
+        <div class="card" style="width: 18rem;">
+          <img src="Abyssinian Woodpecker.jpg" class="card-img-top" alt="Image not found">
+          <div class="card-body">
+            <h5 class="card-title">Abyssinian Woodpecker</h5>
+            <p class="card-text">The Abyssinian woodpecker, also known as the golden-backed woodpecker or the golden-mantled woodpecker, is a species of bird in the woodpecker family, Picidae. It is native to Africa, where it occurs in Eritrea and Ethiopia. It appears to be a close relative of the cardinal woodpecker Dendropicos fuscescens</p>
+            <a href="https://en.wikipedia.org/wiki/Abyssinian_woodpecker" class="btn btn-primary">Get full details</a>
+          </div>
+        </div>
+      
+        <div class="card" style="width: 18rem;">
+          <img src="Namib long-eared bat.jpg" class="card-img-top" alt="Image not found">
+          <div class="card-body">
+            <h5 class="card-title">Namib long-eared bat</h5>
+            <p class="card-text">The Namib long-eared bat is a species of vesper bat in the family Vespertilionidae found in Namibia. It is found in these habitats: dry savanna and temperate desert.</p>
+            <a href="https://en.wikipedia.org/wiki/Namib_long-eared_bat" class="btn btn-primary">Get full details</a>
+          </div>
+        </div>
+      </div>
        </body>
 
 
